	  Do the same with IUSE data in packages for EAPI=1. Thanks for the
	  hint to Leonardo Valeri Manera <l.valerimanera at gmail.com>
	- Fix error handling in pushback_lines_file(), see
	  http://bugs.gentoo.org/show_bug.cgi?id=220119
	- Fix some bsd shell incompatibilities in scripts, see
	  http://bugs.gentoo.org/show_bug.cgi?id=220397
	- Reorganize eixrc/defaults.cc
	- Minor documentation fixes, see
	  http://bugs.gentoo.org/show_bug.cgi?id=219066

*eix-0.12.4
	Emil Beinroth <emilbeinroth at gmx.net>:
	- Drop EIX_WIKI and use PACKAGE_BUGREPORT; Label Wolfgang and Roland
	  as inactive developers, so they are less likely to be bothered with
	  emails.
	- Fix http://bugs.gentoo.org/show_bug.cgi?id=216483, a mask like
	  =app-portage/eix-0* triggered an exception.
	  Affected versions are >=eix-0.12.0.

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Treat parent profiles before children, see
	  http://bugs.gentoo.org/show_bug.cgi?id=217120
	- Let update-eix first process options like --print.
	  This also fixes script problems with KEEP_VIRTUAL=true.
	  Thanks to tzopik <tzopik at gmail.com> for reporting and
	  investigating. See http://bugs.gentoo.org/show_bug.cgi?id=216972
	- Conversion of all latin1 characters to unicode.
	- Fix segfault/endless loop when loops in profile/**/parent data occur.
	- Decrease required number of simultaneously open files.

*eix-0.12.3
	Emil Beinroth <emilbeinroth at gmx.net>:
	- Fix sqlite error messages
	- Add SysError exception and use it in database code, so we throw
	  errors and don't hang if there is something wrong with the database.
	- Make io::read_packagetree a little faster by reading the database as
	  categories with packages, not just as a stream of packages.
	  Only do seek in PackageReader::skip() if we didn't read all
	  information.
	- Add support for multiple inheritance in "parent" files of profiles.

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>: